fixing h1, h2, h3 alignment II

--- a/inst/rmarkdown/templates/xaringan/resources/useR.css
+++ b/inst/rmarkdown/templates/xaringan/resources/useR.css
@@ -17,32 +17,30 @@
 }
 
 .title-slide h1 {
-  padding-top: 200px;
-  text-align: left;
+  padding-top: 50px;
+  text-align: center;
   padding-bottom: 2px;
   margin-bottom: 2px;
   font-weight: bold;
   color:#1B65B7;
   font-size: 34pt;
 
-
-
 }
 
 .title-slide h2 {
-  text-align: left;
+  text-align: center;
   padding-top: 0px;
   margin-top: 0px;
-  font-size: 24pt;
+  font-size: 26pt;
 
 }
 
 .title-slide h3 {
   text-align: left;
   text-shadow: none;
-  padding: 0px;
-  margin: 0px;
-  line-height: 1;
+  padding: 4px;
+  margin: 3px;
+  line-height: 1.1;
   font-size: 20pt;
 
 }
